--- a/pages/cart.html
+++ b/pages/cart.html
@@ -911,7 +911,7 @@
                         </div>
                         <div class="btn-area">
                             <button type="button" class="btn-popup btn-primary"
-                                onclick="location.href='/pages/cart.html'">네</button>
+                                onclick="location.href='/emart/pages/cart.html'">네</button>
                         </div>
                     </div>
                 </div>
