--- a/mobile/pages/join.html
+++ b/mobile/pages/join.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>회원가입 - 이마트 에브리데이</title>
     <!-- CSS 로드 -->
-    <link rel="stylesheet" href="/emart/emart/assets/styles/mobile.css">
+    <link rel="stylesheet" href="/assets/styles/mobile.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" as="style" crossorigin
